--- a/01_FinalModels.Rmd
+++ b/01_FinalModels.Rmd
@@ -100,6 +100,7 @@ df <- openxlsx::read.xlsx(file.path('long.xlsx'))
 df_original <- df
 
 df_double <- prepare_data(df, recode_pushing = TRUE, use_mi = use_mi)[[1]]
+summary(df_double$pushing)
 
 ```
 
