--- a/03_SensitivityPushingSeparate.Rmd
+++ b/03_SensitivityPushingSeparate.Rmd
@@ -100,6 +100,7 @@ df <- openxlsx::read.xlsx(file.path('long.xlsx'))
 df_original <- df
 
 df_double <- prepare_data(df, recode_pushing = FALSE, use_mi = use_mi)[[1]]
+summary(df_double$pushing)
 
 ```
 
