--- a/04_SensitivityOtherCovariates.Rmd
+++ b/04_SensitivityOtherCovariates.Rmd
@@ -119,10 +119,10 @@ model_rows_fixed <- c(
     'pressure_partner_cw', 
     'pushing_self_cw', 
     'pushing_partner_cw', 
+    'planPlan',
     'day', 
     'weartime_self_cw',
     
-    'planPlan',
     'support_self_cw',
     'support_partner_cw',
     'isWeekendWeekend',
@@ -188,10 +188,10 @@ model_rownames_fixed <- c(
     "Daily pressure utilized (partner's view)", 
     "Daily pushing experienced", 
     "Daily pushing utilized (partner's view)", 
+    'Actionplan',
     "Day", 
     "Daily weartime",
     
-    'Actionplan',
     'Daily support received',
     "Daily support provided (partner's view)",
     'Is a Weekend',
@@ -281,10 +281,10 @@ model_rows_fixed_hu <- c(
     'pressure_partner_cw', 
     'pushing_self_cw', 
     'pushing_partner_cw', 
+    'planPlan',
     'day', 
     'weartime_self_cw',
   
-    'planPlan',
     'support_self_cw',
     'support_partner_cw',
     'isWeekendWeekend',
@@ -313,10 +313,10 @@ model_rows_fixed_hu <- c(
     'hu_pressure_partner_cw', 
     'hu_pushing_self_cw', 
     'hu_pushing_partner_cw', 
+    'hu_planPlan',
     'hu_day', 
     'hu_weartime_self_cw',
 
-    'hu_planPlan',
     'hu_support_self_cw',
     'hu_support_partner_cw',
     'hu_isWeekendWeekend',
@@ -392,10 +392,10 @@ model_rownames_fixed_hu <- c(
     "Daily pressure utilized (partner's view)", 
     "Daily pushing experienced", 
     "Daily pushing utilized (partner's view)", 
+    'Actionplan',
     "Day", 
     "Daily weartime",
 
-    'Actionplan',
     'Daily support received',
     "Daily support provided (partner's view)",
     'Is a Weekend',
@@ -424,10 +424,10 @@ model_rownames_fixed_hu <- c(
     "Hu Daily pressure utilized (partner's view)", 
     "Hu Daily pushing experienced", 
     "Hu Daily pushing utilized (partner's view)", 
+    'Hu Actionplan',
     "Hu Day", 
     "Hu Daily weartime",
 
-    'Hu Actionplan',
     'Hu Daily support received',
     "Hu Daily support provided (partner's view)",
     'Hu Is a Weekend',
@@ -533,7 +533,6 @@ formula <- bf(
     pushing_self_cw + pushing_partner_cw +
     
     #support_self_cw + support_partner_cw + 
-    #plan +
     isWeekend + 
     got_JITAI_self + 
     skilled_support +
@@ -545,6 +544,7 @@ formula <- bf(
     #support_self_cb + support_partner_cb + 
     studyGroup +
     
+    plan +
     day + 
     
     # Random effects
@@ -557,7 +557,6 @@ formula <- bf(
     pushing_self_cw + pushing_partner_cw +
     
     #support_self_cw + support_partner_cw + 
-    #plan +
     isWeekend + 
     got_JITAI_self + 
     skilled_support +
@@ -569,6 +568,7 @@ formula <- bf(
     #support_self_cb + support_partner_cb + 
     studyGroup +
     
+    plan +
     day + 
     
     # Random effects
@@ -736,7 +736,6 @@ formula <- bf(
     pushing_self_cw + pushing_partner_cw +
     
     #support_self_cw + support_partner_cw + 
-    #plan +
     isWeekend + 
     got_JITAI_self + 
     skilled_support +
@@ -748,6 +747,7 @@ formula <- bf(
     #support_self_cb + support_partner_cb + 
     studyGroup +
     
+    plan +
     day +  + weartime_self_cw + weartime_self_cb +
     
     # Random effects
@@ -849,7 +849,6 @@ formula <- bf(
     pushing_self_cw + pushing_partner_cw +
     
     #support_self_cw + support_partner_cw + 
-    #plan +
     isWeekend + 
     got_JITAI_self + 
     skilled_support +
@@ -861,6 +860,7 @@ formula <- bf(
     #support_self_cb + support_partner_cb + 
     studyGroup +
     
+    plan +
     day + 
     
     # Random effects
@@ -962,7 +962,6 @@ formula <- bf(
     pushing_self_cw + pushing_partner_cw +
     
     #support_self_cw + support_partner_cw + 
-    #plan +
     isWeekend + 
     got_JITAI_self + 
     skilled_support +
@@ -974,6 +973,7 @@ formula <- bf(
     #support_self_cb + support_partner_cb + 
     studyGroup +
     
+    plan +
     day + 
     
     # Random effects
@@ -1089,7 +1089,6 @@ formula <- bf(
     pushing_self_cw + pushing_partner_cw +
     
     #support_self_cw + support_partner_cw + 
-    #plan +
     isWeekend + 
     got_JITAI_self + 
     skilled_support +
@@ -1101,6 +1100,7 @@ formula <- bf(
     #support_self_cb + support_partner_cb + 
     studyGroup +
     
+    plan +
     day + 
     
     # Random effects
